2003-11-30 17:00  kbs
    * Added missing drag-and-drop constants
    * Fixed ListCtrl::get_item_text (it was returning the row number 
        instead of the text)
    * Fixed the TextDropTarget virtual call back return value
    * Added samples/etc/dragdrop.rb sample to demonstrate the 
        drag and drop classes
    * App now tried to call on_init first, but still falls back 
        to the now-deprecated OnInit if necessary
        [Note: All the samples should be changed to define
        on_init instead of OnInit]


2003-11-30 15:00  kbs
    * Fixed compile warnings in 25 cpp files
    
    
2003-11-20 22:30  kbs
    * Fixed compile errors:
        * Disable xrc by default
        * Add missing dependencies in depends
        * Add missing dependencies in 'tclean' target


2003-11-20 20:00  kbs
    * Merged more changes from Nicolas Kral, including:
        * Fixes for building under MSV6
        * extconf was changed to build xrc correctly with MSVC
        * Added a 'DateTime.to_time' method that converts a wxDateTime 
          to a ruby Time object
        * Changed CalendarCtrl to take a DateTime or ruby Time object
          as a parameter to the constructor
        * Added some types that weren't in the dynamic cast table


2003-11-17 21:00  kbs
    * Merged in changes from Nicolas Kral, including:
        * NULL_PEN and NULL_BRUSH
        * Several mouse events
        * Improved support for dynamic casting of returned cpp
          objects back to ruby objects
        * Some support for XRC
        * Window 'paint' method that yields a PaintDC


2003-11-17 19:25  kbs
	* Made droptarget an ABSTRACT class for MSWin compatibility

	* Updated wxpp.rb to support that


2003-11-16 kbs
	* Added drag and drop classes submitted by Gergely Kontra

	* Added ABSTRACT feature to wxpp.rb


2003-11-10 21:00  kbs
	* Fixed extconf.rb that I broke a couple weeks ago

	* Added method: Wx::init_all_image_handlers


2003-08-22 19:00  kbs