@@ -17,7 +17,7 @@ wxTextDropTarget();
 virtual void GetData();
 #virtual bool OnDrop(wxCoord x, wxCoord y, const void *data, size_t size)
 #virtual bool OnDropText(wxCoord x, wxCoord y, const char* data);
-abstract bool OnDropText(int x, int y, const wxString& data);
+abstract bool OnDropText(wxCoord x, wxCoord y, const wxString& data);
 //$$ METHODS_END
 
 //$$ BEGIN_H_FILE
@@ -40,8 +40,7 @@ bool wxTextDropTargetHelper::OnDropText(wxCoord x, wxCoord y, const wxString& da
 	ID method = rb_intern("on_drop_text");
 	
 	VALUE ret = rb_funcall(me,method,3,INT2NUM(x),INT2NUM(y),rb_str_new2(data.c_str()));
-	
-	return IsTrue(ret);
+    return IsTrue(ret);
 }
 
 //$$ END_CPP_FILE
